# open_mower_ros

src/mower_addons/: CMakeLists.txt  package.xml
src/mower_addons/msg/: raspi_inf.msg
src/mower_addons/src/: mower_machine_inf.cpp  wifi_scan.c  wifi_scan.h
src/open_mower/launch/: open_mower.launch
src/open_mower/launch/include/: _params.launch
src/open_mower/rviz/: record_map.rviz
