<?xml version="1.0"?>
<package format="2">
  <name>mower_addons</name>
  <version>0.0.0</version>
  <description>mower_addons package pusblish Ping, wifi info, CPU usage</description>
  
  <maintainer email="ene9ba@todo.todo">ene9ba</maintainer>
  
  <license>TODO</license>

  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  
  <!-- if using msg files in th package -->
  <build_depend>message_generation</build_depend>
  
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
  <!-- if using msg files in th package -->
  <exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
